<resources>

    <string name="action_games">Игры</string>
    <string name="action_dictionary">Словари</string>
    <string name="action_logout">Выйти</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="skip">Пропустить</string>

    <string name="word">Слово</string>
    <string name="translate">Перевод</string>
    <string name="frequency">Изученность</string>

    <string name="attention">Внимание</string>
    <string name="clear_database">Очистить базу данных ?</string>
    <string name="need_add_words">Необходимо добавить не менее 5 слов</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>

    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>

    <string name="game_level_success">Успешно</string>
    <string name="game_level_error">Ошибок</string>
    <string name="game_over">Игра успешно окончена</string>
    <string name="game_your_results">Ваши результаты:</string>
    <string name="game_finish">Закончить</string>

    <string name="loading">Загрузка...</string>
    <string name="retry">Повторить</string>
    <string name="error_default_message">Упс, что-то пошло не так…</string>

</resources>