<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/black"
            android:hint="@string/word"
            android:showDividers="none"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                tools:text="apple" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/translate"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTranslate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                tools:text="яблоко" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/frequency"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:editable="false"
                android:focusable="false"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                tools:text="0.3" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEditWordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/selector_enable_button_text_color"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flAddWordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_8sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:enabled="false"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/selector_enable_button_text_color"
            android:textSize="@dimen/_14sdp" />

    </FrameLayout>

</RelativeLayout>